[MOD]1、完全剥离dubbo；2、设置运行时JVM参数